# simplempi

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  pyproject.toml  setup.py  simpleMPI.py
.github/workflows/: main.yml
simplempi/: __init__.py  parfor.py  simpleMPI.py
tests/: test_parfor.py  test_scatter_dict.py  test_scatter_list.py
